Fixed whitespace gap between scrollbar and content

--- a/src/renderer/global.css
+++ b/src/renderer/global.css
@@ -21,6 +21,7 @@ td {
   text-overflow: ellipsis;
   overflow: hidden;
   padding: 0.5em 0.8em;
+  width: 100%;
 }
 
 thead,
